sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:10: error: ')' expected but '}' found.
      }
      ^AlgBubbleSort1:11: error: ')' expected but '}' found.
    }
    ^